--- a/assets/resources/index.html
+++ b/assets/resources/index.html
@@ -8,12 +8,21 @@
 <body style="margin:20px">
 
 <div>
+    <h2>EasyMesh</h2>
+    <ul>
+        <li>
+            <a href="./easymesh/timezones.json">timezones.json</a>
+        </li>
+    </ul>
+    <br>
+
     <h2>ZigBee</h2>
     <ul>
         <li>
             <a href="./zigbee/zigbee-cluster-library-specification.pdf">zigbee-cluster-library-specification.pdf</a>
         </li>
     </ul>
+    <br>
 </div>
 
 </body>
