add easythings.apk support

--- a/assets/resources/index.html
+++ b/assets/resources/index.html
@@ -16,6 +16,13 @@
     </ul>
     <br>
 
+    <h2>EasyThings</h2>
+    <ul>
+        <li>
+            <a href="./easythings/easythings_20200515.apk">easythings_20200515.apk</a>
+        </li>
+    </ul>
+
     <h2>ZigBee</h2>
     <ul>
         <li>
