--- a/assets/resources/index.html
+++ b/assets/resources/index.html
@@ -19,6 +19,9 @@
     <h2>EasyThings</h2>
     <ul>
         <li>
+            <a href="./easythings/easythings_20200515.apk">easythings_stable.apk</a>
+        </li>
+        <li>
             <a href="./easythings/easythings_20200515.apk">easythings_20200515.apk</a>
         </li>
     </ul>
