Add EasyColor user manual

--- a/assets/resources/index.html
+++ b/assets/resources/index.html
@@ -27,6 +27,14 @@
     </ul>
     <br>
 
+    <h2>EasyColor EasyLife</h2>
+    <ul>
+        <li>
+            <a href="./easycolor/EasyColorUserManual_en.pdf">EasyColor User Manual en.pdf</a>
+        </li>
+    </ul>
+    <br>
+
     <h2>ZigBee</h2>
     <ul>
         <li>
